--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </button>
             </div>
         </div>
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden">
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden md:hidden"">
             <div class="menuItem w-full mt-2">
                 <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
             </div>
@@ -69,8 +69,8 @@
     </div>
     </section>
     <section>
+    <img class="w-screen sm:max-w-fit sm:mx-auto" src="https://placeholder.pics/svg/600x300" alt="Contact banner placeholder">
     <div class="flex flex-col mt-16 mx-8 mb-4">
-        <img class="w-screen" src="https://placeholder.pics/svg/600x300" alt="Contact banner placeholder">
         <h1 class="text-5xl my-2">Contact me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
