--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
                     <img src="menu-svgrepo-com.svg" alt="menu icon" width=50 height=50>
                 </button>
             </div>
-        </div>
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden md:hidden"">
+        </div>  
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 customHidden md:hidden">
             <div class="menuItem w-full mt-2">
                 <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
             </div>
