--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header class="navBarMain sticky top-0">
         <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
             <div class="menuItem mx-1 my-1 ">
-                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
+                    <a class="home logo" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
@@ -35,20 +35,20 @@
                 </button>
             </div>
         </div>  
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 customHidden md:hidden">
-            <div class="menuItem w-full mt-2">
-                <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-4 items-right text-right justify-evenly bg-orange-500 absolute right-0 customHidden md:hidden">
+            <div class="menuItem w-full mt-2 py-4 border-b border-gray-800 text-left">
+                <a class="home home2 p-4 hover:bg-orange-300 w-full hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="menuItem w-full">
-                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline" href="about.html" alt="about navigation">About me</a>
+            <div class="menuItem w-full pb-4 border-b border-gray-800 text-left">
+                <a class="p-4 hover:bg-orange-300 hover:text-black w-full hover:underline" href="about.html" alt="about navigation">About me <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="menuItem w-full ">
-                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline " href="contact.html" alt="contact navigation">Contact me</a>
+            <div class="menuItem w-full  pb-4 border-b border-gray-800 text-left">
+                <a class="p-4 hover:bg-orange-300 hover:text-black w-full hover:underline " href="contact.html" alt="contact navigation">Contact me <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="menuItem float-right ">
-                <button class="download rounded-full bg-black py-2 px-3">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1" alt="download button"></i></button>
+            <div class="menuItem float-right text-center my-6 ">
+                <button class="download rounded-full  bg-black py-2 px-3">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1" alt="download button"></i></button>
             </div>
-            <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2" alt="close navigation"><i class="fa-regular fa-circle-xmark"></i></button>
+            <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2" alt="close navigation"><i class="fa-regular fa-circle-xmark "></i></button>
         </div>
     </header>
     <img src="https://placeholder.pics/svg/800x400" alt="About Banner" width=100%>
